--- a/css/styles.css
+++ b/css/styles.css
@@ -282,15 +282,15 @@
   margin-left: 0;
   margin-bottom: 30px;
   flex-basis: calc(100%/3);
-  position: relative;
 }
 .portfolio-content-list figcaption {
   padding: 20px 24px;
-  width: 370px
+  width: 370px;
+  z-index: 1;
 }
 .portfolio-content-list figure {
   border: 1px solid var(--menu-line);
-  width: 370px
+  width: 370px;
 }
 .portfolio-content-list figure:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -298,19 +298,26 @@
   1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
 }
+.portfolio-content-list:hover .portfolio-overflow {
+  transform: translateX(0);
+}
 .portfolio-box {
-  
+  position: relative;
+  overflow: hidden;
 }
 .portfolio-overflow {
   position: absolute;
+  top: 0;
+  left: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
+  transform: translatey(100%);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-overflow-txt {
   font-size: 18px;
   line-height: 1.556;
   color: var(--main-bg);
-  padding: 49px 24px;
+  padding: 62px 24px;
   margin: 0;
 }
 .company {
