--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,7 @@
   margin-left: 0;
   margin-bottom: 30px;
   flex-basis: calc(100%/3);
+  /* transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .portfolio-content-list figcaption {
   padding: 20px 24px;
@@ -299,25 +300,31 @@
   cursor: pointer;
 }
 .portfolio-content-list:hover .portfolio-overflow {
-  transform: translateX(0);
+  transform: translatey(0);
 }
 .portfolio-box {
   position: relative;
   overflow: hidden;
 }
+.portfolio-box img {
+  display: block;
+}
 .portfolio-overflow {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translatey(100%);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-overflow-txt {
+.portfolio-overflow-txt,
+.portfolio-box p {
   font-size: 18px;
   line-height: 1.556;
   color: var(--main-bg);
-  padding: 62px 24px;
+  padding: 49px 24px;
   margin: 0;
 }
 .company {
