--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
   color: var(--blue-elements);
 }
 .nav-menu-item-link,
-.contact-link, 
+.contact-link
 {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
