--- a/css/styles.css
+++ b/css/styles.css
@@ -514,18 +514,114 @@ margin-top: 10px;
   min-height: 581px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-15%);
+  transform: translate(-50%,-40%);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
   0px 1px 1px rgba(0, 0, 0, 0.14),
   0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+label {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+textarea {
+  resize: none;
+  height: 120px;
+}
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+form .form-head {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.172 ;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 40px;
+  margin-bottom: 12px;
+}
+form .form-name,
+form .form-phone,
+form .form-email,
+form .form-feedback {
+  font-size: 12px;
+  line-height: 1.172;
+  margin-top: 10px;
+  padding-bottom: 4px;
+
+}
+.form-name input,
+.form-phone input,
+.form-email input,
+.form-feedback textarea {
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}  
+.form-name input,
+.form-phone input,
+.form-email input {
+  height: 40px;
+}
+.form-feedback textarea {
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  color: rgba(117, 117, 117, 0.5);
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+}
+.agree-submit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-agreement {
+  display: inline;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--grey-elements);
+}
+.form-agreement input {
+  margin-right: 8px;
+}
+.form-agreement a {
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--blue-elements);
+}
+.signup-form button {
+  background-color: var(--blue-elements);
+  color: var(--main-bg);
+  font: var(--main-font);
+  font-size: 16px;
+  font-weight: 700;
+  border: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
 .close-x {
   width: 11px;
   height: 11px;
+  margin-left: 1px;
+  margin-top: 4px;
 }
 .close-btn {
   position: absolute;
+  align-content: center;
   top: 8px;
   right: 8px;
   width: 30px;
